# mate0905

./: text.txt
CLionProjects/: .gitignore
CLionProjects/Week-4 /Day-1 /Practice 3/: CMakeLists.txt  electricGuitar.cpp  instrument.cpp  instrument.h  stringedInstrument.h
CLionProjects/untitled11/: main.cpp
CLionProjects/untitled12/: main.cpp
CLionProjects/untitled14/: main.cpp
CLionProjects/untitled5/: main.cpp
CLionProjects/untitled9/: main.cpp
CLionProjects/week 1 day 2 (task 2)/: main.cpp
CLionProjects/week 1 day 2 (task 5)/: main.cpp
CLionProjects/week 1 day 3 (task 5)/: CMakeLists.txt
CLionProjects/week 1 day 4 ( task 1)/: CMakeLists.txt
CLionProjects/week 1 day 4 ( task 2)/: CMakeLists.txt
CLionProjects/week 1 day 4 ( task 3)/: CMakeLists.txt
CLionProjects/week 2 day 1 ( he will never ) /: CMakeLists.txt  main.cpp
CLionProjects/week 2 day 1 ( urlfixer ) /: main.cpp
CLionProjects/week 2 day 1 (simple replace)/: main.cpp
CLionProjects/week 2 day 1 free pra. /: CMakeLists.txt
CLionProjects/week 2 day 2 ( pointer size ) /: main.cpp
CLionProjects/week 2 day 3 ( print each line ) /: CMakeLists.txt  main.cpp
CLionProjects/week 2 day 3 (count lines ) /: main.cpp
CLionProjects/week 2 day 4 ( free practice ) /: main.cpp
CLionProjects/week 3 day 2 ( animal ) /: Animal.cpp  Animal.h
CLionProjects/week 3 day 4 ( counter ) /: CMakeLists.txt
CLionProjects/week 3 day 4 ( number adder ) /: CMakeLists.txt
CLionProjects/week 3 day 5 ( farm ) /: CMakeLists.txt  animal.cpp  animal.h  farm.cpp  main.cpp
week 2 day 1 free pra. /: main.cpp
(+146 files in other folders)
