cmake_minimum_required(VERSION 3.13)
project(week_4_day_3___wednesday_practice___)

set(CMAKE_CXX_STANDARD 14)

add_executable(week_4_day_3___wednesday_practice___ main.cpp bassGuitar.cpp bassGuitar.h electricGuitar.cpp electricGuitar.h instrument.cpp instrument.h violin.cpp violin.h stringedInstrument.cpp stringedInstrument.h)